# Kintsugi

./: AGENTS.md  Kintsugi.slnx  README.md
.opencode/commands/: commit.md
.opencode/skills/add-feature/: SKILL.md
.opencode/skills/designer/: SKILL.md
.opencode/skills/fix-bug/: SKILL.md
.opencode/skills/refactor/: SKILL.md
Kintsugi.Tests/: Kintsugi.Tests.csproj
Kintsugi.Web/Features/Items/: Index.cshtml.cs
c_sharp/: AGENTS.md
c_sharp/Kintsugi.Web/Data/: AppDbContext.cs
c_sharp/Kintsugi.Web/Features/: _ViewImports.cshtml
docs/: conventions.md  decisions.md
go/: .gitignore  AGENTS.md  Makefile  README.md  go.mod  opencode.json
go/docs/: conventions.md  decisions.md
go/internal/: embed.go
go/tests/: piece_test.go
python/: .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
python/docs/: conventions.md  decisions.md
python/src/: db.py  main.py  templates.py
python/src/features/error/: error.html  router.py
python/src/features/home/: home.html  router.py
python/src/features/pieces/: _piece_list.html  list.html  piece.py  repository.py  router.py
python/src/public/css/: site.css
python/src/templates/layouts/: base.html
python/tests/: conftest.py
python/tests/features/pieces/: test_piece.py  test_routes.py
src/Kintsugi.Web/: Program.cs  appsettings.json
tests/Kintsugi.Tests/: Kintsugi.Tests.csproj
typescript/: AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
typescript/docs/: conventions.md  decisions.md
typescript/src/: db.ts  index.ts
(+59 files in other folders)
